--- a/07/app/cocktails/cocktails.component.html
+++ b/07/app/cocktails/cocktails.component.html
@@ -2,10 +2,10 @@
     <h1>Cocktails</h1>
     <p>There's a drink for every mood or occasion. Find your favorite cocktail recipes below</p>
     <p>
-        <button (click)="showEditor = !showEditor">Add a cocktail</button>
+        <button class="btn btn-outline-primary" (click)="showEditor = !showEditor">Add a cocktail</button>
     </p>
 
-    <np-cocktail-editor *ngIf="showEditor" [@flyInOut]="'in'" (saved)="fetchCocktails()"></np-cocktail-editor>
+    <np-cocktail-editor *ngIf="showEditor" (saved)="fetchCocktails()"></np-cocktail-editor>
 </div>
 
 <div class="cocktails-list">
